force-app/main/default/objects/Dummy17__c/Dummy17__c.object-meta.xml
<CustomObject>
    <label>Dummy17</label>
    <nameField>
        <label>Dummy17 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dummy17</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>