force-app/main/default/objects/Dummy17__c/fields/FooBar022__c.field-meta.xml
<CustomField>
    <fullName>FooBar022__c</fullName>
    <label>FooBar022</label>
    <length>255</length>
    <type>Text</type>
</CustomField>