force-app/main/default/objects/Dummy17__c/fields/FooBar071__c.field-meta.xml
<CustomField>
    <fullName>FooBar071__c</fullName>
    <label>FooBar071</label>
    <length>255</length>
    <type>Text</type>
</CustomField>