force-app/main/default/objects/Dummy17__c/fields/FooBar103__c.field-meta.xml
<CustomField>
    <fullName>FooBar103__c</fullName>
    <label>FooBar103</label>
    <length>255</length>
    <type>Text</type>
</CustomField>